k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/issuer: lets-encrypt-real
    #cert-manager.io/issuer: lets-encrypt-test
    #nginx.ingress.kubernetes.io/secure-backends: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - example.morsley.io
    secretName: tls-ingress
  rules:
  - host: example.morsley.io
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        #path: /
